Delete multiply task from tasks list

--- a/index.html
+++ b/index.html
@@ -27,26 +27,24 @@
                                             <input id="task" type="text">
                                             <label for="task">New Task</label>
                                         </div>
-                                        </div>
+                                    </div>
                                     <input type="submit" value="Add Task" class="btn">
                                 </form>
-                        </div>
                             </div>
+                        </div>
                         <div class="card-action">
                             <h4>Tasks</h4>
                             <ul class="collection">
-                                <li class="collection-item">Study HTML</li>
-                                <li class="collection-item">Study CSS</li>
-                                <li class="collection-item">Study JS</li>
                             </ul>
+                            <a href="#" class="btn" id="delete-tasks">Delete All Tasks</a>
                         </div>
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
     </div>
 </div>
-<!-- Compiled and minified JavaScript -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="app.js"></script>
 </body>
